--- a/package.json
+++ b/package.json
@@ -1,32 +1,63 @@
 {
-  "name": "react",
-  "version": "1.0.0",
-  "description": "React example starter project",
-  "keywords": [
-    "react",
-    "starter"
-  ],
-  "main": "src/index.js",
-  "dependencies": {
-    "events": "3.2.0",
-    "lodash": "4.17.20",
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
-    "react-scripts": "3.4.3"
-  },
-  "devDependencies": {
-    "typescript": "3.8.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "stengah",
+	"version": "1.0.1",
+	"description": "Stengah state management for React",
+	"main": "./dist/main.js",
+	"types": "./dist/main.d.ts",
+	"repository": "git@github.com:EdgarPost/stengah.git",
+	"author": "Edgar Post <info@edgarpost.com>",
+	"license": "MIT",
+	"scripts": {
+		"build": "rm -rf dist && tsc",
+		"test": "jest",
+		"lint": "eslint  --fix ./"
+	},
+	"husky": {
+		"hooks": {
+			"post-merge": "npm install",
+			"pre-commit": "lint-staged",
+			"pre-push": "npm run test"
+		}
+	},
+	"lint-staged": {
+		"*.{js}": [
+			"npm run lint",
+			"git add"
+		]
+	},
+	"peerDependencies": {
+		"react": "^17.0.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.16",
+		"@babel/preset-env": "^7.12.16",
+		"@babel/preset-react": "^7.13.13",
+		"@babel/preset-typescript": "^7.13.0",
+		"@testing-library/react": "^11.2.5",
+		"@testing-library/react-hooks": "^5.0.3",
+		"@types/jest": "^26.0.20",
+		"@types/shallowequal": "^1.1.1",
+		"@typescript-eslint/eslint-plugin": "^4.22.0",
+		"@typescript-eslint/parser": "^4.22.0",
+		"babel-eslint": "^10.0.2",
+		"babel-jest": "^26.6.3",
+		"eslint": "^7.19.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^7.2.0",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"husky": "^5.0.9",
+		"jest": "^26.6.3",
+		"lint-staged": "^10.5.4",
+		"prettier": "2.2.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-test-renderer": "^17.0.2",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.1.5"
+	},
+	"dependencies": {
+		"events": "^3.2.0",
+		"shallowequal": "^1.1.0"
+	}
 }
